styles.css
/* ... */
.is-fullwidth {
  width: 100%;
}

.data-input {
  white-space: pre-wrap;
  border: none;
  padding: 0.5rem;
  color: var(--text-normal);
  font-size: 1rem;
  border-radius: 4px;
  resize: none;
  background-color: var(--background-primary);
  box-sizing: border-box;
  flex: 1 1 auto;
  text-align: justify;
}

.data-input * {
  margin: initial;
}

.data-input:hover {
  background-color: var(--background-secondary);
}

.data-input:focus {
  outline: none;
}

.data-input-checkbox {
  place-self: center;
}

.data-input-checkbox input[type="checkbox"] {
  /* Add if not using autoprefixer */
  -webkit-appearance: none;
  /* Remove most all native input styles */
  appearance: none;
  background-color: var(--form-background);
  /* Not removed via appearance */
  margin: 0;

  font: inherit;
  color: currentColor;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid currentColor;
  border-radius: 0.15em;
  transform: translateY(-0.075em);

  display: grid;
  place-content: center;
}

.data-input-checkbox input[type="checkbox"]::before {
  content: "";
  width: 0.65em;
  height: 0.65em;
  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
  transform: scale(0);
  transform-origin: bottom left;
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1em 1em var(--form-control-color);
  /* Windows High Contrast Mode */
  background-color: CanvasText;
}

.data-input-checkbox input[type="checkbox"]:checked {
  background-color: currentColor;
}

.data-input-checkbox input[type="checkbox"]:checked::before {
  transform: scale(1);
}

.data-input-checkbox input[type="checkbox"]:focus {
  outline: max(2px, 0.15em) solid currentColor;
  outline-offset: max(2px, 0.15em);
}

.database-plugin__md_cell {
  padding: 0.5rem;
}

.database-plugin__md_cell p {
  display: inline;
}

.svg-icon-sm svg {
  position: relative;
  height: 1.25em;
  width: 1.25em;
}

.svg-gray svg {
  stroke: var(--text-faint);
}

.option-input {
  width: 100%;
  font-size: 1rem;
  border: none;
  background-color: transparent;
}

.option-input:focus {
  outline: none;
}

.database-plugin__noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 2;
  overflow: hidden;
}

.sort-button {
  padding: 0.25rem 0.75rem;
  margin: 0;
  width: 100%;
  background-color: transparent;
  font-size: 0.875rem;
  color: var(--text-muted);
  cursor: pointer;
  text-align: left;

  display: flex;
  flex-direction: row;
  align-items: center;
}

.database-plugin__tr:last-child .database-plugin__td {
  border-bottom: 0;
}

.database-plugin__add-row {
  color: var(--text-accent);
  padding: 0.5rem;
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  cursor: pointer;
}

.database-plugin__add-row:hover {
  background-color: var(--background-secondary);
  color: var(--text-accent-hover);
}

.database-plugin__add-row .database-plugin__td {
  border: none;
  background-color: transparent;
  color: var(--text-muted);

  flex-direction: row;
  align-items: center;
}

.database-plugin__th {
  color: var(--text-faint);
  font-weight: 500;
  font-size: 0.875rem;
  cursor: pointer;
  background-color: var(--background-primary);
}

.database-plugin__th:hover {
  background-color: var(--background-secondary);
  color: var(--text-normal);
}

.database-plugin__th-content {
  overflow-x: hidden;
  text-overflow: ellipsis;
  padding: 0.5rem;
  display: flex;
  align-items: center;
}

.database-plugin__td {
  overflow: hidden;
  color: var(--text-normal);
  background-color: var(--background-primary);
  align-items: stretch;
  justify-content: center;
  padding: 0;
  display: flex;
  padding: 0.5rem;
  flex-direction: column;
}

.database-plugin__td-content {
  display: block;
  align-items: center;
}


.database-plugin__cell_size_compact .database-plugin__td {
  padding: 0;
}


.database-plugin__cell_size_normal .database-plugin__td {
  padding: 0.3rem;
}


.database-plugin__cell_size_wide .database-plugin__td {
  padding: 0.6rem;
}


.database-plugin__sticky_first_column .database-plugin__td:first-child,
.database-plugin__sticky_first_column .database-plugin__th:first-child {
  position: sticky;
  left: 0;
  z-index: 1;
}



.database-plugin__table {
  border-spacing: 0;
  border-bottom: 1px solid var(--background-modifier-border);
  display: "flex";
}

.database-plugin__th:last-child {
  border-right: 0;
}

.database-plugin__td:last-child {
  border-right: 0;
}

.database-plugin__th,
.database-plugin__td {
  white-space: pre-wrap;
  margin: 0;
  border-bottom: 1px solid var(--background-modifier-border);
  border-right: 1px solid var(--background-modifier-border);
  position: relative;
}

.database-plugin__header-group,
.database-plugin__header {
  justify-content: space-between;
  background-color: var(--background-secondary);
}

.database-plugin__navbar {
  display: flex;
  flex: 1 0 auto;
}

.database-plugin__calendar {
  align-self: center;
}

.database-plugin__relationship {
  color: rgb(66, 66, 66);
  box-sizing: border-box;
  font-weight: 400;
  padding: 2px 6px;
  border-radius: 4px;
  display: inline-block;
}

.text-align-right {
  text-align: right;
}

.cell-padding {
  padding: 0.5rem;
}

.d-flex {
  display: flex;
}

.cursor-default {
  cursor: default;
}

.align-items-center {
  align-items: center;
}

.flex-wrap-wrap {
  flex-wrap: wrap;
}

.menu.database-plugin__popper {
  position: relative;
  padding: 0;
}

.cursor-pointer {
  cursor: pointer;
}

.icon-margin {
  margin-right: 4px;
}

.font-weight-600 {
  font-weight: 600;
}

.font-size-75 {
  font-size: 0.75rem;
}

.flex-1 {
  flex: 1;
}

/**
*  Database Styles
*/
.dbfolder-table-container tr input {
  background: var(--background-modifier-box-shadow);
}

.draggable {
  top: auto !important;
  left: auto !important;
}
/* ... */

